<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/notificationIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/notifications_icon"
        android:src="@drawable/ic_bell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="316dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/todo1"
        android:src="@drawable/ic_plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/debtsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/debt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/d_ug_1"
            android:backgroundTint="@color/accent_blue"
            android:textColor="@color/text_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="Suspicious0dp" />

        <Button
            android:id="@+id/debt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/d_ug_2"
            android:backgroundTint="@color/accent_blue"
            android:textColor="@color/text_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/groupsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/grupy"
            android:backgroundTint="@color/accent_blue"
            android:textColor="@color/text_light"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:backgroundTint="@color/accent_blue"
            android:textColor="@color/text_light"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ustawienia"
            android:backgroundTint="@color/accent_blue"
            android:textColor="@color/text_light"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
