<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myGroups"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".MyGroupsActivity">

    <TextView
        android:id="@+id/groupsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="16dp"
        android:text="@string/d_ugi_grupowe"
        android:textColor="@color/coin_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/groupsDebtsListView"
        android:layout_width="376dp"
        android:layout_height="580dp"
        android:layout_margin="16dp"
        android:divider="@color/accent_yellow"
        android:dividerHeight="1dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupsTitle"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/groupsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/grupy1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profil1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ustawienia1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
