<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".AddUserActivity">

    <!-- Przycisk powiadomień -->
    <ImageButton
        android:id="@+id/notificationButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/notifications_icon"
        android:src="@drawable/ic_bell"
        android:scaleType="centerInside"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"/>

    <!-- Logo aplikacji -->
    <ImageButton
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_add"
        android:scaleType="centerInside"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"/>

    <!-- Dodanie długu -->
    <ImageButton
        android:id="@+id/addingDebtsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="316dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/addingDebts_icon"
        android:src="@drawable/ic_plus"
        android:scaleType="centerInside"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"/>

    <!-- Pole tekstowe Imię -->
    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Imię"
        android:backgroundTint="@color/button_background"
        android:textColorHint="@color/text_light"
        android:textColor="@color/text_light"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Pole tekstowe Nazwisko -->
    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nazwisko"
        android:backgroundTint="@color/button_background"
        android:textColorHint="@color/text_light"
        android:textColor="@color/text_light"
        app:layout_constraintTop_toBottomOf="@id/firstNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Pole tekstowe Telefon -->
    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Telefon"
        android:backgroundTint="@color/button_background"
        android:textColorHint="@color/text_light"
        android:textColor="@color/text_light"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Pole tekstowe Email -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:backgroundTint="@color/button_background"
        android:textColorHint="@color/text_light"
        android:textColor="@color/text_light"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Przycisk Dodaj użytkownika -->
    <Button
        android:id="@+id/addUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dodaj użytkownika"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/text_light"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <!-- Dolny pasek nawigacyjny -->

    <ListView
        android:id="@+id/userListView"
        android:layout_width="349dp"
        android:layout_height="215dp"
        android:layout_marginTop="32dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUserButton"
        app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/groupsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/grupy"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ustawienia"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
