<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myGroups"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:padding="8dp"
    tools:context=".MyGroupsActivity">

    <!-- UpperNav -->

    <ImageButton
        android:id="@+id/notificationButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/notifications_icon"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_bell"
        app:layout_constraintEnd_toStartOf="@+id/appLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="126dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/app_logo"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addingDebtsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/addingDebts_icon"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_plus"
        app:layout_constraintStart_toEndOf="@+id/appLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Main -->

    <TextView
        android:id="@+id/groupsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:text="@string/d_ugi_grupowe"
        android:textColor="@color/text_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <!-- Kontener na dynamicznie generowane grupy i długi -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/groupsTitle"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/groupsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" />
    </ScrollView>

    <!-- BottomNav -->

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/groupsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/BottomNavStyle"
            android:text="Grupy"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/BottomNavStyle"
            android:text="Profil"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/BottomNavStyle"
            android:text="Ustawienia"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
