<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".AddDebtActivity">

    <ImageButton
        android:id="@+id/notificationButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/notifications_icon"
        android:src="@drawable/ic_bell"
        android:scaleType="centerInside"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"/>

    <ImageButton
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_add"
        android:scaleType="centerInside"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"/>

    <EditText
        android:id="@+id/nameEditText"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_light"
        android:hint="Tytuł długu"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/amountEditText"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_light"
        android:hint="Kwota długu"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/infoEditText"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Dodatkowe informacje"
        android:textColor="@color/text_light"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/amountEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp" />


    <TextView
        android:id="@+id/selectedUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Brak wybranego użytkownika"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="292dp" />

    <Spinner
        android:id="@+id/userSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/button_background"
        app:layout_constraintTop_toBottomOf="@+id/infoEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/selectUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Wybierz użytkownika"
        app:layout_constraintBottom_toTopOf="@+id/addDebtButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSpinner"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/addDebtButton"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="Dodaj dług"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSpinner" />

    <Button
        android:id="@+id/addingUsersButton"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Dodaj użytkownika"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDebtButton" />

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/groupsButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grupy" />

        <Button
            android:id="@+id/profileButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profil" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ustawienia" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>