<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/optionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:text="@string/opcje"
        android:textColor="@color/coin_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/optionsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </LinearLayout>

    <Button
        android:id="@+id/resetDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background"
        android:text="@string/resetuj_dane"
        android:textColor="@color/text_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="446dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/changeThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background"
        android:text="@string/zmie_motyw"
        android:textColor="@color/text_light"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="372dp"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/groupsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Grupy"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Profil"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Ustawienia"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/text_light"
            android:layout_weight="1"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
